src/test/deca/context/valid/print/print-carac-spe.deca
// Description:
//    Programme minimaliste utilisant print.
//
// Resultats:
//    '

{
    print(" \" ");
}