src/test/deca/context/invalid/print/printlnx-r.deca
// Description:
//    Programme minimaliste utilisant printlx.
//
// Resultats:
//    erreur ligne 8

{
    printlnx("\r");
}
